--- a/modules/cherry-ui-elements/inc/ui-elements/ui-iconpicker/assets/ui-iconpicker.scss
+++ b/modules/cherry-ui-elements/inc/ui-elements/ui-iconpicker/assets/ui-iconpicker.scss
@@ -122,8 +122,6 @@
 	margin-left: 10px;
 }
 .iconpicker-popover .popover-footer input[type=search].iconpicker-search {
-	/*width:auto;
-	    float:left;*/
 	margin-bottom: 14px;
 }
 .iconpicker-popover.popover > .arrow,
@@ -305,12 +303,6 @@
 	font-size: 18px;
 	color: #444;
 	box-shadow: 0 0 0 1px #dddddd;
-	/*&:nth-child(4n+4) {
-	        margin-right: 0;
-	    }
-	    &:nth-last-child(-n+4) {
-	        margin-bottom: 0;
-	    }*/
 }
 .iconpicker .iconpicker-item:hover:not(.iconpicker-selected) {
 	background-color: #eeeeee;
